@@ -19,6 +19,8 @@
         * [BUGFIX]: Fixed querying selects with numerous subselects with '*' operators for result columns.
         * [BUGFIX]: #2868 Global configuration directory is not created (even empty) when using portable configuration.
         * [BUGFIX]: #2866 Fixed Search dialog in SQL editor to honor changes of the searched value during the single session of searching.
+        * [BUGFIX]: Fixed problem with keyboard focus for syntax completer under Gnome 3.
+        * [BUGFIX]: #2872 'Enter' key in table name of import dialog now triggers 'Next' action, not clearing the table name.
 
 [3.0.5]
         * [ADDED]: #2831 Ported 'Erase table data' feature (in table's context menu) from version 2.1.5.
